# rigz

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Cargo.toml  Makefile  README.md  grammar.js  hello.rigz  package-lock.json  package.json  rigz.pest  rigz_test.sh  test.sh  tree-sitter.json
benches/: eval_benchmarks.rs  vm_benchmarks.rs
bindings/go/: binding_test.go  go.mod
bindings/rust/: build.rs  lib.rs
crates/ast/: Cargo.toml  README.md
crates/ast/benches/: ast_benchmarks.rs
crates/ast/src/: docs.rs  format.rs  lib.rs  modules.rs  program.rs  token.rs  validate.rs
crates/ast/src/ast_derive/: program.rs
crates/ast/tests/: integration_test.rs
crates/ast_derive/: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
crates/ast_derive/src/: derive_module.rs  derive_object.rs  lib.rs
crates/ast_derive/tests/: integration_test.rs
crates/core/: Cargo.toml  README.md
crates/core/benches/: number_benchmarks.rs  value_benchmarks.rs
crates/core/src/: args.rs  lib.rs  macros.rs  reference.rs  rigz_object.rs  types.rs
crates/core/src/derive/: enum_value.rs  lifecycle.rs  mod.rs  objects.rs  operations.rs  value.rs
crates/core/src/enum_value/: mod.rs
crates/core/src/lifecycle/: mod.rs  snapshot.rs
crates/core/src/number/: add.rs  bitand.rs  bitor.rs  bitxor.rs  div.rs  mod.rs  mul.rs  rem.rs  rev.rs  shl.rs  shr.rs  sub.rs
crates/core/src/object/: from.rs  mod.rs  snapshot.rs
crates/core/src/object/ops/: add.rs  bitand.rs  bitor.rs  bitxor.rs  div.rs  mod.rs  mul.rs  neg.rs  not.rs  rem.rs  reverse.rs  shl.rs  shr.rs  sub.rs
crates/core/src/operations/: binary.rs  mod.rs  snapshot.rs  unary.rs
crates/core/src/primitive/: error.rs  mod.rs  snapshot.rs
crates/core/src/primitive/ops/: add.rs  bitand.rs  bitor.rs  bitxor.rs  div.rs  mul.rs  neg.rs  not.rs  rem.rs  reverse.rs  shl.rs  shr.rs  sub.rs
crates/core/src/primitive/value_range/: mod.rs
crates/core/src/primitive/value_range/ops/: add.rs  div.rs  mul.rs  sub.rs
crates/core/src/traits/: as_primitive.rs  dyn_traits.rs  mod.rs  snapshot.rs
crates/core/src/types/: mod.rs  snapshot.rs
crates/core/src/vm_values/: mod.rs  snapshot.rs  stack.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: main.rs
crates/rigz_vm/: Cargo.toml
crates/runtime/: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
crates/runtime/benches/: eval_benchmarks.rs  eval_defaults_benchmarks.rs
crates/runtime/src/: lib.rs  runtime.rs  token.rs
crates/runtime/src/modules/: any.rs  assertions.rs  collections.rs  date.rs  file.rs  html.rs  http.rs  json.rs  log.rs  math.rs  mod.rs  number.rs  random.rs  std_lib.rs  string.rs  uuid.rs  vm.rs
crates/runtime/src/prepare/: mod.rs
crates/runtime/src/prepare/program/: expression.rs  mod.rs
crates/runtime/tests/: integration_test.rs
crates/tree-sitter/: Cargo.toml  go.mod  grammar.js  package.json  setup.py
crates/tree-sitter-rigz/: Package.swift  binding.gyp  package-lock.json  pyproject.toml
crates/tree-sitter/bindings/python/tests/: test_binding.py
crates/tree-sitter/bindings/rust/: lib.rs
crates/tree-sitter/bindings/swift/TreeSitterRigzTests/: TreeSitterRigzTests.swift
crates/tree-sitter/crates/tree-sitter-rigz/: Cargo.toml  grammar.js
crates/tree-sitter/crates/tree-sitter-rigz/bindings/rust/: lib.rs
crates/tree-sitter/queries/: highlights.scm
crates/tree-sitter/src/: grammar.json  node-types.json  parser.c
crates/value/: Cargo.toml
crates/vm/: Cargo.toml  README.md
crates/vm/benches/: number_benchmarks.rs  value_benchmarks.rs  vm_benchmarks.rs
crates/vm/docs/: instructions.md  unary_ops.md
crates/vm/src/: builder.rs  call_frame.rs  lib.rs  module.rs  objects.rs  process.rs  scope.rs  stack.rs  vm.rs
crates/vm/src/derive/: lifecycle.rs  mod.rs  objects.rs  value.rs
crates/vm/src/instructions/: binary.rs  mod.rs  runner.rs  unary.rs
crates/vm/src/lifecycle/: mod.rs
crates/vm/src/macros/: builder.rs  mod.rs
crates/vm/src/number/: bitand.rs  bitor.rs  mod.rs  neg.rs  not.rs  shl.rs  shr.rs
crates/vm/src/objects/: mod.rs
crates/vm/src/operations/: binary.rs  unary.rs
crates/vm/src/process/: mod.rs  process_manager.rs  runner.rs
crates/vm/src/process/single/: mod.rs
crates/vm/src/process/threaded/: mod.rs  runner.rs
crates/vm/src/traits/: mod.rs
crates/vm/src/types/: mod.rs
crates/vm/src/value/: add.rs  bitand.rs  bitor.rs  bitxor.rs  div.rs  error.rs  logical.rs  mod.rs  mul.rs  neg.rs  not.rs  rem.rs  reverse.rs  shl.rs  shr.rs  sub.rs
crates/vm/src/value_range/: add.rs  div.rs  mod.rs  mul.rs  sub.rs
crates/vm/src/vm/: mod.rs  options.rs  runner.rs  snapshot.rs  values.rs
crates/vm/tests/: integration_test.rs
docs/: binary_ops.md  index.md  instructions.md  unary_ops.md
examples/advent_of_code_2024/: .gitignore  day1.rg  day2.rg
extensions/vim/: lsp.lua
npm/rigz-highlight.js/: README.md  index.js  package-lock.json  package.json
queries/: highlights.scm
rigz_tests/: imports.rg  scopes_test.not_supported  utils.rg
src/: ast.rs  builder.rs  call_frame.rs  debug.rs  docs.rs  format.rs  fsm.rs  grammar.json  instructions.rs  lib.rs  lifecycle.rs  macros.rs  main.rs  module.rs  node-types.json  objects.rs  old.rs  parser.c  parser.rs  program.rs  repl.rs  run.rs  runtime.rs  scope.rs  test.rs  token.rs  utils.rs  validate.rs  vm.rs
src/ast/: mod.rs  program.rs  validate.rs
src/ast_derive/: program.rs
src/derive/: instructions.rs  mod.rs  objects.rs  value.rs
src/instructions/: binary.rs  lifecycles.rs  mod.rs  modules.rs  unary.rs
src/lifecycle/: mod.rs
src/macros/: builder.rs  mod.rs
src/modules/: file.rs  json.rs  mod.rs  std_lib.rs  vm.rs
src/number/: add.rs  bitand.rs  bitor.rs  bitxor.rs  div.rs  logical.rs  mod.rs  mul.rs  neg.rs  not.rs  rem.rs  rev.rs  shl.rs  shr.rs  sub.rs
src/operations/: binary.rs
src/prepare/: mod.rs  program.rs
src/traits/: mod.rs
src/value/: add.rs  bitand.rs  bitor.rs  bitxor.rs  div.rs  logical.rs  mod.rs  mul.rs  neg.rs  not.rs  rem.rs  rev.rs  reverse.rs  shl.rs  shr.rs  sub.rs
src/value_range/: add.rs  mod.rs
tests/: integration_test.rs
(+61 files in other folders)
