[package]
name = "rigz"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "CLI for running rigz locally"
repository = "https://gitlab.com/inapinch/rigz/rigz_cli"

[workspace]
members = [
    "crates/ast",
    "crates/ast_derive",
    "crates/vm",
    "crates/runtime",
    "crates/tree-sitter",
    "crates/lsp"
]

[profile.bench]
debug = true

[workspace.dependencies]
itertools = "0.14.0"
log = { version = "0.4", features = [] }
rand = { version = "0.8.5" }
rigz_vm = {version = "0.37", path = "crates/vm", default-features = false}
rigz_ast = {version = "0.6", path = "crates/ast", default-features = false}
rigz_ast_derive = {version = "0.6", path = "crates/ast_derive"}
rigz_runtime = {version = "0.6", path = "crates/runtime", default-features = false}
tree-sitter-rigz = { version = "0.6", path = "crates/tree-sitter" }
web-sys = { version = "0.3.76", features = ["console"] }

[features]
default = ["rigz_vm/default", "rigz_ast/default", "rigz_runtime/default", "dep:tokio"]
js = ["rigz_vm/js", "rigz_ast/js", "rigz_runtime/js"]

[dependencies]
clap = {version = "4.5", features = ["env", "derive"]}
pretty_env_logger = "0.5.0"
log.workspace = true
rigz_vm.workspace = true
rigz_ast = {workspace = true, features = ["format"]}
rigz_runtime.workspace = true
tree-sitter-highlight = "0.24"
tree-sitter-rigz.workspace = true
rustyline = "14.0.0"
chrono = "0.4"
crossterm = "0.28.1"
ratatui = "0.29.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"], optional = true }
