[package]
name = "rigz_ast"
version = "0.6.0"
description = "AST parser for the rigz programming language"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://gitlab.com/inapinch/rigz/crates/ast"
keywords = ["rigz", "ast"]

[features]
default = []
derive = ["dep:proc-macro2", "dep:quote", "rigz_core/derive"]
format = []

[dependencies]
logos = "0.15"
quote = { version = "1", optional = true }
proc-macro2 = { version = "1.0", optional = true }
rigz_core.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }

[[bench]]
name = "ast_benchmarks"
harness = false