[package]
name = "rigz_ast_derive"
version = "0.6.0"
description = "Procedural macro to generate ParsedModules for rigz, generate a trait for the module implementation and parse input at compile time."
keywords = ["rigz", "proc_macro", "procmacro"]
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://gitlab.com/inapinch/rigz/crates/ast_derive"

[features]
default = []

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "2.0"
rigz_core = { features = ["derive"], workspace = true }
rigz_ast = { features = ["derive"], default-features = false, workspace = true }
log = "0.4.27"

[dev-dependencies]
rigz_core.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typetag = "0.2.20"
wasm-bindgen-test = "0.3"