[package]
name = "rigz_core"
version = "0.1.0"
edition = "2021"

[features]
default = []
colors = []
derive = ["dep:proc-macro2", "dep:quote"]
serde = ["dep:serde", "indexmap/serde", "dep:typetag"]
threaded = []

[dependencies]
dyn-clone = "1.0.17"
indexmap = "2.7.0"
itertools = "0.14.0"
log.workspace = true
serde = {workspace = true, optional = true}
proc-macro2 = { version = "1.0.93", optional = true }
quote = { version = "1.0.38", optional = true }
typetag = { version = "0.2.19", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
