[package]
name = "rigz_core"
version = "0.1.0"
edition = "2021"

[features]
default = []
colors = []
derive = ["dep:proc-macro2", "dep:quote"]
serde = ["dep:serde", "indexmap/serde", "dep:typetag"]
snapshot = []
threaded = []

[dependencies]
dyn-clone = "1.0.17"
indexmap = "2.7.0"
itertools = "0.14.0"
log.workspace = true
mopa = "0.2.2"
serde = {workspace = true, optional = true}
proc-macro2 = { version = "1.0.93", optional = true }
quote = { version = "1.0.38", optional = true }
typetag = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "number_benchmarks"
harness = false

[[bench]]
name = "value_benchmarks"
harness = false
