[package]
name = "rigz_core"
version = "0.1.0"
edition = "2021"

[features]
default = ["snapshot"]
colors = []
derive = ["dep:proc-macro2", "dep:quote"]
snapshot = []
threaded = []

[dependencies]
dyn-clone = "1.0.20"
fxhash = "0.2.1"
indexmap = { version = "2.10.0", features = ["serde"] }
itertools = "0.14.0"
log.workspace = true
mopa = "0.2.2"
serde.workspace = true
serde_json.workspace = true
proc-macro2 = { version = "1.0.95", optional = true }
quote = { version = "1.0.40", optional = true }
typetag.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }

[[bench]]
name = "number_benchmarks"
harness = false

[[bench]]
name = "value_benchmarks"
harness = false
