[package]
name = "rigz_lsp"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://gitlab.com/inapinch/rigz/crates/lsp"
keywords = ["rigz", "lsp"]

[dependencies]
lsp-server = "0.7.7"
lsp-types = "=0.95"
ctrlc = "3.4.1"
serde_json = "1.0.132"
serde = "1.0.214"
