[package]
name = "rigz_lsp"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://gitlab.com/inapinch/rigz/crates/lsp"
keywords = ["rigz", "lsp"]

[dependencies]
tower-lsp = "0.20.0"
tokio = { version = "1.43.0", features = ["io-std", "rt-multi-thread", "rt", "macros"] }
