[package]
name = "rigz_runtime"
version = "0.6.0"
edition = "2021"
description = "Handles parsing and converting rigz to its VM instructions (for syntax highlighting use tree-sitter-rigz instead)"
readme = "README.md"
license = "MIT"
repository = "https://gitlab.com/inapinch/rigz/crates/runtime"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["rigz_ast/threaded"]
js = ["rigz_ast/js"]

[dependencies]
chrono = "0.4"
rigz_ast.workspace = true
rigz_ast_derive.workspace = true
itertools.workspace = true
log.workspace = true
serde_json = "1.0"
uuid = { version = "1.11.0", features = ["v1", "v3", "v4", "v5", "v6", "v7", "v8"] }
rand.workspace = true

[dev-dependencies]
pretty_env_logger = "0.5.0"
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "eval_benchmarks"
harness = false