[package]
name = "rigz_runtime"
version = "0.6.0"
edition = "2021"
description = "Handles parsing and converting rigz to its VM instructions (for syntax highlighting use tree-sitter-rigz instead)"
readme = "README.md"
license = "MIT"
repository = "https://gitlab.com/inapinch/rigz/crates/runtime"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["rigz_vm/threaded"]
js = ["rigz_vm/js", "dep:getrandom", "dep:web-sys"]
serde = ["dep:serde_json", "rigz_core/serde"]

[dependencies]
chrono = "0.4"
getrandom = { version = "0.2.15", optional = true, features = ["js"]}
rigz_core.workspace = true
rigz_ast.workspace = true
rigz_ast_derive.workspace = true
rigz_vm.workspace = true
itertools.workspace = true
log.workspace = true
reqwest = {version = "0.12", features = ["blocking"]}
scraper = "0.22.0"
serde_json = { version = "1.0", optional = true }
uuid = { version = "1.11.0", features = ["v1", "v3", "v4", "v5", "v6", "v7", "v8"] }
rand.workspace = true
web-sys = { workspace = true, optional = true }

[dev-dependencies]
rigz_runtime = {workspace = true, features = ["serde"]}
pretty_env_logger = "0.5.0"
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "eval_benchmarks"
harness = false