[package]
name = "tree-sitter-rigz"
description = "Rigz grammar for tree-sitter"
version = "0.6.0"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "rigz"]
categories = ["parsing", "text-editors"]
repository = "https://gitlab.com/inapinch/rigz/crates/tree-sitter"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.0"

[dev-dependencies]
tree-sitter = "0.24.3"

[build-dependencies]
cc = "1.0.87"
