[package]
name = "rigz_vm"
description = "Stack based VM for rigz"
version = "0.37.0"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://gitlab.com/inapinch/rigz/crates/vm"
keywords = ["rigz", "vm"]

[features]
default = ["threaded"]
derive = ["dep:proc-macro2", "dep:quote"]
js = ["dep:web-sys", "dep:web-time"]
threaded = ["dep:crossbeam", "dep:dashmap", "dep:tokio"]

[dependencies]
crossbeam = { version = "0.8.4", optional = true }
dashmap = { version = "6.1.0", optional = true, features = ["inline"] }
indexmap = { version = "2.7.0", features = ["serde"] }
itertools.workspace = true
log.workspace = true
log-derive = "0.4.1"
quote = { version = "1", optional = true }
proc-macro2 = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
tokio = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true, features = ["console"] }
web-time = {version = "1.1.0", optional = true}

[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "number_benchmarks"
harness = false

[[bench]]
name = "value_benchmarks"
harness = false

[[bench]]
name = "vm_benchmarks"
harness = false
