[package]
name = "rigz_vm"
description = "Stack based VM for rigz"
version = "0.37.0"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://gitlab.com/inapinch/rigz/crates/vm"
keywords = ["rigz", "vm"]

[features]
default = ["threaded"]
derive = ["rigz_core/derive", "dep:proc-macro2", "dep:quote"]
js = ["dep:web-sys", "dep:web-time"]
threaded = ["dep:dashmap", "dep:tokio", "rigz_core/threaded"]

[dependencies]
dashmap = { version = "6.1.0", optional = true, features = ["inline"] }
dyn-clone = "1.0.17"
itertools.workspace = true
log.workspace = true
log-derive = "0.4.1"
rigz_core.workspace = true
rigz_value.workspace = true
quote = { version = "1", optional = true }
proc-macro2 = { version = "1.0", optional = true }
serde.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "time"], optional = true }
typetag = "0.2.19"
web-sys = { workspace = true, optional = true }
web-time = {version = "1.1.0", optional = true}

[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "number_benchmarks"
harness = false

[[bench]]
name = "value_benchmarks"
harness = false

[[bench]]
name = "vm_benchmarks"
harness = false
