[package]
name = "rigz_vm"
description = "Stack based VM for rigz"
version = "0.37.0"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://gitlab.com/inapinch/rigz/crates/vm"
keywords = ["rigz", "vm"]

[features]
default = ["threaded"]
derive = ["rigz_core/derive", "dep:proc-macro2", "dep:quote"]
js = ["dep:web-sys", "dep:web-time"]
threaded = ["dep:tokio", "rigz_core/threaded"]

[dependencies]
itertools.workspace = true
log.workspace = true
log-derive = "0.4.1"
rigz_core = { workspace = true, features = ["snapshot"] }
quote = { version = "1", optional = true }
proc-macro2 = { version = "1.0", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "time"], optional = true }
web-sys = { workspace = true, optional = true }
web-time = {version = "1.1.0", optional = true}

[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }

[[bench]]
name = "vm_benchmarks"
harness = false
